LASB-1287: ProsecutionConcludedService updated to trigger the processing of required hearing data on CDA if it is not present in MAAT. ProsecutionConcludedServiceTest updated to cover the new workflow.